<resources>
    <string name="app_name">QQToolbox</string>
    <string name="hao">好的</string>
    <string name="custom_cancel">怎么可能</string>
    <string name="baud_rate">Baud rate</string>
    <string name="preference_key_save_value_type">save_value_type</string>
    <string name="preference_key_save_value_type_enable">enable</string>
    <string name="preference_title_save_value_type">是否保存</string>
    <string name="preference_title_input_number">只输入数字</string>
    <string name="preference_key_switch">switch_enable</string>
    <string name="preference_key_serial_port_baud_rate">serial_port_baud_rate</string>
    <string name="preference_title_serial_port_baud_rate">波特率</string>

    <string-array name="baud_rates">
        <item>50</item>
        <item>75</item>
        <item>110</item>
        <item>134</item>
        <item>150</item>
        <item>200</item>
        <item>300</item>
        <item>600</item>
        <item>1200</item>
        <item>1800</item>
        <item>2400</item>
        <item>4800</item>
        <item>9600</item>
        <item>19200</item>
        <item>38400</item>
        <item>57600</item>
        <item>115200</item>
        <item>230400</item>
        <item>460800</item>
        <item>500000</item>
        <item>576000</item>
        <item>921600</item>
        <item>1000000</item>
        <item>1152000</item>
        <item>1500000</item>
        <item>2000000</item>
        <item>2500000</item>
        <item>3000000</item>
        <item>3500000</item>
        <item>4000000</item>
    </string-array>
    <string-array name="data_bits">
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
    <string-array name="stop_bits">
        <item>1</item>
        <item>1.5</item>
        <item>2</item>
    </string-array>
    <string-array name="parity">
        <item>NONE</item>
        <item>ODD</item>
        <item>EVEN</item>
    </string-array>
    <string name="title_activity_settings2">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
